@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-12T01:03:59Z",
-  "count_outdated" : 1186,
-  "uniques_outdated" : 750,
+  "timestamp" : "2024-02-13T01:03:52Z",
+  "count_outdated" : 1188,
+  "uniques_outdated" : 751,
   "count" : 1210,
   "uniques" : 762,
   "clones" : [
-    {
-      "timestamp": "2024-01-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-30T00:00:00Z",
       "count": 2,
