@@ -1,12 +1,7 @@
 {
-  "count": 24,
+  "count": 22,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-01-29T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-30T00:00:00Z",
       "count": 2,
